Remove race condition from unit test
Also replaced concrete cache implementation with mock.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>